--- a/index.html
+++ b/index.html
@@ -16,56 +16,13 @@
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
 		ga('create', 'UA-8230104-20', 'auto');
 		ga('send', 'pageview');
-
-
 	</script>
-	<script type="text/javascript">
-		ga(function(tracker){
-			ref = tracker.get('referrer');
-			console.log(ref);
-			if (ref.indexOf("alencar") >= 0) {
-				tracker.set('referrer', 'http://example.com');
-				console.log(tracker.get('referrer'));
-			}
-			// if (ref === 'http://oscaralencar.com.br/') {
-			// 	tracker.set('referrer', 'http://example.com');
-			// 	console.log(tracker.get('referrer'));
-			// }
-
-		})
-	</script>
-
 	<!--[if IE]>
-								<script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-								<script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
-				<![endif]-->
-	<script type="text/javascript">
-		// Tratamento para requisições de dispositivos mobile
-(function(a) {
-    (jQuery.browser = jQuery.browser || {}).mobile = /(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od|ad)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))
-})(navigator.userAgent || navigator.vendor || window.opera);
-
-
-if (jQuery.browser.mobile || navigator.userAgent.toLowerCase().indexOf('tablet') > - 1 || navigator.userAgent.toLowerCase().indexOf('android') > - 1 || navigator.userAgent.toLowerCase().indexOf('kfapwi') > - 1) {
-
-    var link = $(location).attr('href');
-    //link = link.toLowerCase();
-
-    /*var x = link.split('://');
-            var l = x[1].indexOf('www.');*/
-
-    link = link.replace('www.', 'teste.');
-    link = link.replace('WWW.', 'teste.');
-    link = link.replace('http://draericacavalcante.com.br', 'http://teste.draericacavalcante.com.br');
-
-    $(location).attr("href", link);
-}
-
-
-	</script>
+	<script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 
 <body>
@@ -100,7 +57,7 @@ if (jQuery.browser.mobile || navigator.userAgent.toLowerCase().indexOf('tablet')
 
 			<div class="col-xs-12 col-sm-6 col-md-4 col-md-pull-4 services ">
 			<h3>Clínica Exclusiva</h3>
-<p>Trate seu filho em uma das únicas clínicas em Belém e no Estado do Pará especializada em doenças reumatológicas pediátricas.</p>
+			<p>Trate seu filho em uma das únicas clínicas em Belém e no Estado do Pará especializada em doenças reumatológicas pediátricas.</p>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d63816.955087672846!2d-48.52299872619077!3d-1.4391997417235391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x92a48ebb2c84adbf%3A0x8d7325b930f594e3!2sAv.+Sen.+Lemos%2C+443%2C+Bel%C3%A9m+-+PA%2C+66050-000!3m2!1d-1.4392!2d-48.4886658!5e0!3m2!1spt-BR!2sbr!4v1439807313745" width="100%" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 			</div>
@@ -132,21 +89,21 @@ if (jQuery.browser.mobile || navigator.userAgent.toLowerCase().indexOf('tablet')
 					<h2 class="contato-tit">Entre em Contato</h2>
 					<div class="wrap-contato-form">
 
-  <form action="processa-form.php" method="post" id="formularioContato">
- 	<div class="form-group">
- 		<input type="text" class="form-control" placeholder="Nome" name="nome">
- 	</div>
- 	<div class="form-group">
- 		<input type="text" class="form-control" placeholder="Email" name="email">
- 	</div>
- 	<div class="form-group">
- 		<input type="text" class="form-control" placeholder="Telefone" name="telefone">
- 	</div>
- 	<div class="form-group">
- 		<textarea class="form-control" placeholder="Escreva sua mensagem" name="mensagem"></textarea>
- 	</div>
-	  <input type="submit" class="btn btn-info btn-block" value="Enviar Mensagem"></input>
-  </form>
+					  <form action="processa-form.php" method="post" id="formularioContato">
+					 	<div class="form-group">
+					 		<input type="text" class="form-control" placeholder="Nome" name="nome" id="form_nome">
+					 	</div>
+					 	<div class="form-group">
+					 		<input type="text" class="form-control" placeholder="Email" name="email" id="form_email">
+					 	</div>
+					 	<div class="form-group">
+					 		<input type="text" class="form-control" placeholder="Telefone" name="telefone" id="form_telefone">
+					 	</div>
+					 	<div class="form-group">
+					 		<textarea class="form-control" placeholder="Escreva sua mensagem" name="mensagem" id="form_mensagem"></textarea>
+					 	</div>
+						  <input type="submit" class="btn btn-info btn-block" value="Enviar Mensagem"></input>
+					  </form>
 
 
 
@@ -170,46 +127,61 @@ if (jQuery.browser.mobile || navigator.userAgent.toLowerCase().indexOf('tablet')
 			</div>
 		</footer>
 	</div><!-- /container-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="js/jqueryvalidate/jquery.validate.js" type="text/javascript"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="js/jqueryvalidate/jquery.validate.js" type="text/javascript"></script>
+	<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 	<script type="text/javascript">
-	$(document).ready( function() {
-		  $("#formularioContato").validate({
-			// Define as regras
-			rules:{
-			  nome:{
-				// campoNome será obrigatório (required) e terá tamanho mínimo (minLength)
-				required: true, minlength: 2
-			  },
-			  email:{
-				// campoEmail será obrigatório (required) e precisará ser um e-mail válido (email)
-				required: true, email: true
-			  },
-			  mensagem:{
-				// campoMensagem será obrigatório (required) e terá tamanho mínimo (minLength)
-				required: true, minlength: 2
-			  }
-			},
-			// Define as mensagens de erro para cada regra
-			messages:{
-			  nome:{
-				required: "Digite o seu nome",
-				minLength: "O seu nome deve conter, no mínimo, 2 caracteres"
-			  },
-			  email:{
-				required: "Digite o seu e-mail para contato",
-				email: "Digite um e-mail válido"
-			  },
-			  mensagem:{
-				required: "Digite a sua mensagem",
-				minLength: "A sua mensagem deve conter, no mínimo, 2 caracteres"
-			  }
-			}
-		  });
+		$(function() {
+
+			//Inicializa o emailjs
+			emailjs.init("user_LIYCptTVTWVMGGjsMsX09");
+
+			$("#formularioContato").submit(function(e) {
+		    		e.preventDefault();
+				}).validate({
+				rules: 	{
+					nome: 		{	required: true, minlength: 2	},
+					email: 		{	required: true, email: true 	},
+					mensagem: 	{	required: true, minlength: 2	}
+				},
+				// Define as mensagens de erro para cada regra
+				messages: {
+					nome: 	{	required: "Digite o seu nome", minLength: "O seu nome deve conter, no mínimo, 2 caracteres"	},
+					email: 	{	required: "Digite o seu e-mail para contato", email: "Digite um e-mail válido"	},
+					mensagem: { required: "Digite a sua mensagem", minLength: "A sua mensagem deve conter, no mínimo, 2 caracteres"	}
+				},
+				submitHandler: function(form) {
+					var form_nome;
+					var form_email;
+					var form_telefone;
+					var form_mensagem;
+
+					form_nome 		= $('#form_nome').val();
+					form_email 		= $('#form_email').val();
+					form_telefone 	= $('#form_telefone').val();
+					form_mensagem 	= $('#form_mensagem').val();
+
+			    	emailjs.send("sendgrid","template_G69fMbmW",{
+							reply_to: form_email,
+							subject: 'Contato de'+ form_nome +'  através do site ',
+							from_name: form_nome,
+							to_name: 'Dra. Erica',
+							message_html: form_mensagem,
+							telefone: form_telefone
+							})
+						.then(
+							function(response) {
+								console.log("SUCCESS", response);
+							},
+							function(error) {
+							console.log("FAILED", error);
+							}
+						);
+			  	}
+		  	});
 		});
 	</script>
-
-
 </body>
 
 </html>
