--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 					 	<div class="form-group">
 					 		<textarea class="form-control" placeholder="Escreva sua mensagem" name="mensagem" id="form_mensagem"></textarea>
 					 	</div>
-						  <input type="submit" class="btn btn-info btn-block" value="Enviar Mensagem"></input>
+						  <input type="submit" class="btn btn-info btn-block" value="Enviar Mensagem" id="btn-submit"></input>
+						  <div id="btn-loading" class="btn btn-info btn-block" style="display: none;"><img src="img/loading.gif"></div>
 					  </form>
 
 
@@ -162,6 +163,9 @@
 					form_telefone 	= $('#form_telefone').val();
 					form_mensagem 	= $('#form_mensagem').val();
 
+					$('#btn-loading').show();
+					$('#btn-submit').hide();
+
 			    	emailjs.send("sendgrid","template_G69fMbmW",{
 							reply_to: form_email,
 							subject: 'Contato de'+ form_nome +'  através do site ',
@@ -173,9 +177,13 @@
 						.then(
 							function(response) {
 								console.log("SUCCESS", response);
+								$('#btn-loading').hide();
+								$('#btn-submit').show();
 							},
 							function(error) {
-							console.log("FAILED", error);
+								console.log("FAILED", error);
+								$('#btn-loading').hide();
+								$('#btn-submit').show();
 							}
 						);
 			  	}
