--- a/index.html
+++ b/index.html
@@ -105,10 +105,9 @@
 						  <input type="submit" class="btn btn-info btn-block" value="Enviar Mensagem" id="btn-submit"></input>
 						  <div id="btn-loading" class="btn btn-info btn-block" style="display: none;"><img src="img/loading.gif"></div>
 					  </form>
-
-
-
 					</div><!--/wrap-contato-form-->
+					<div id="email-sucesso" class="alert alert-success" role="alert" style="display: none;">Obrigado por entrar em contato. Em breve retornaremos o contato!</div>
+					<div id="email-erro" class="alert alert-danger" role="alert" style="display: none;">Ops! Falha no envio do email. Tente novamente.</div>
 				</div>
 			</div><!--/row-->
 		</div><!--/container-->
@@ -179,11 +178,13 @@
 								console.log("SUCCESS", response);
 								$('#btn-loading').hide();
 								$('#btn-submit').show();
+								$('#email-sucesso').show();
 							},
 							function(error) {
 								console.log("FAILED", error);
 								$('#btn-loading').hide();
 								$('#btn-submit').show();
+								$('#email-erro').show();
 							}
 						);
 			  	}
