--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 						  <input type="submit" class="btn btn-info btn-block" value="Enviar Mensagem" id="btn-submit"></input>
 						  <div id="btn-loading" class="btn btn-info btn-block" style="display: none;"><img src="img/loading.gif"></div>
 					  </form>
-					  	<div id="email-sucesso" class="alert alert-success" role="alert" style="display: none;">Obrigado por entrar em contato. Em breve retornaremos o contato!</div>
-						<div id="email-erro" class="alert alert-danger" role="alert" style="display: none;">Ops! Falha no envio do email. Tente novamente.</div>
+					  	<div id="email-sucesso" class="alert alert-success" role="alert" style="display: none;">Obrigado por entrar em contato. Em breve retornaremos!</div>
+						<div id="email-erro" class="alert alert-danger" role="alert" style="display: none;">Ops! Desculpe, não foi possível enviar seu contato. Tente novamente.</div>
 					</div><!--/wrap-contato-form-->
 				</div>
 			</div><!--/row-->
