ajuste de frase lead

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<div class="top-site">
 						<h2>Dra. Erica Cavalcante</h2>
 						<h1>Consultório de Reumatologia Pediátrica</h1>
-						<p class="lead">Médica especialista em reumatologia pediátrica. Há anos atendendo nossas crianças e adolescentes com amor e dedicação.</p>
+						<p class="lead">Médica especialista em reumatologia pediátrica.<br> Há anos atendendo nossas crianças e adolescentes com amor e dedicação.</p>
 					</div>
 				</div>
 			</div>
