--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- <META http-equiv="refresh" content="1;URL=http://teste.draericacavalcante.com.br"> -->
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="description" content="Dra. Erica Cavalcante - Consultório de Reumatologia Pediátrica - Médica especialista em reumatologia pediátrica. ">
 	<meta name="author" content="Oscar Alencar">
 	<meta name="keywords" content="reumatologia pediátrica, reumatologia pediatrica, reumatologia pediátrica belém, reumatologia pediatrica belém, reumatologia clínica, clinica pediatrica, clínica pediatrica, clínica pediátrica ">
